fixed grid size error and wrapping error

--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body {
     justify-content: center;
     margin-top: 35px;
     margin-bottom: 50px;
-    width: 800px;
-    height: 830px;
+    width: 832px;
+    height: 832px;
     position: relative;
     background-color: white;
     
